--- a/styles/index.css
+++ b/styles/index.css
@@ -48,16 +48,26 @@ body {
 }
 
 .hero header .items {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   color: white;
   width: 50%;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .hero header .nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .hero header .nav .logo {
@@ -70,9 +80,12 @@ body {
 
 .hero header .nav-list {
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .hero header .nav-list .nav-item {
@@ -92,14 +105,22 @@ body {
 }
 
 .hero .banner_inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 700px;
 }
 
 .hero .banner_inner .left {
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .hero .banner_inner .left_wrapper {
@@ -126,9 +147,15 @@ body {
 
 .hero .banner_inner .right {
   background: #02250A;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .hero .banner_inner .right_wrapper {
@@ -153,3 +180,246 @@ body {
   bottom: 0;
   right: 134px;
 }
+
+.reason_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.reason_wrapper .reason_left {
+  margin-left: 70px;
+}
+
+.reason_wrapper .reason_left .reason_left_wrapper .greenbox {
+  width: 552px;
+  height: 635px;
+  background-color: #02250A;
+}
+
+.reason_wrapper .reason_left .reason_left_wrapper .image_left img.image_left {
+  position: absolute;
+  width: 552px;
+  height: 635px;
+  margin-top: -42rem;
+  margin-left: -30px;
+}
+
+.reason_wrapper .reason_left .reason_left_wrapper .play_button img.play_button {
+  position: absolute;
+  z-index: 1;
+  margin-top: -26rem;
+  margin-left: 11.5rem;
+}
+
+.reason_wrapper .reason_right {
+  width: 641px;
+  margin-left: 66px;
+}
+
+.reason_wrapper .reason_right_wrapper .h1 {
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.reason_wrapper .reason_right_wrapper .right_content p {
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-bottom: 60px;
+}
+
+.report {
+  background-color: #02250A;
+  height: 809px;
+}
+
+.report .report_inner {
+  text-align: center;
+}
+
+.report .report_inner .report_inner_wrapper .box {
+  margin-bottom: -50px;
+}
+
+.report .report_inner .report_inner_wrapper .box p {
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: white;
+  padding-top: 56px;
+  margin-left: 40px;
+}
+
+.report .report_inner .report_inner_wrapper .line {
+  height: 11px;
+  width: 110px;
+  margin-left: 40px;
+  border-radius: 0px;
+  background-color: white;
+  margin-bottom: 50px;
+}
+
+.report .report_inner .report_inner_wrapper .image_box {
+  width: 97%;
+}
+
+.report .report_inner .report_inner_wrapper .image_box .image_box_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.report .report_inner .report_inner_wrapper .image_box .image_box_wrapper .white_box {
+  height: 424px;
+  width: 300px;
+  border-radius: 8px;
+  background-color: #fff;
+  margin-left: 66px;
+}
+
+.report .report_inner .report_inner_wrapper .image_box .image_box_wrapper .white_box .image {
+  height: 207px;
+  width: 255px;
+  margin-top: 2px;
+  margin-left: -3px;
+  border-radius: 8px;
+  padding-left: 5px;
+  padding-left: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.report .report_inner .report_inner_wrapper .image_box .image_box_wrapper .white_box .text_content {
+  width: 40vh;
+  margin-top: 2px;
+  margin-left: 10px;
+}
+
+.report .report_inner .report_inner_wrapper .image_box .image_box_wrapper .white_box .text_content .green_text p {
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+  text-align: left;
+  text-align: left;
+  color: #02250A;
+}
+
+.report .report_inner .report_inner_wrapper .image_box .image_box_wrapper .white_box .date p {
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  text-align: right;
+  margin-top: -35px;
+  margin-right: 14px;
+}
+
+.report .report_inner .report_inner_wrapper .image_box .image_box_wrapper .white_box .black_text p {
+  font-family: Inter;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: left;
+}
+
+.report .report_inner .report_inner_wrapper .image_box .image_box_wrapper .white_box .ogun_text {
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #02250A;
+  margin-top: 22px;
+}
+
+.report .report_inner button.white {
+  width: 259px;
+  height: 70px;
+  margin-top: 63px;
+}
+
+.report .report_inner button.white p {
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-transform: capitalize;
+}
+
+.activities .wrapper {
+  margin-left: 70px;
+}
+
+.activities .wrapper .header_text {
+  width: 660px;
+}
+
+.activities .wrapper .header_text p {
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.activities .wrapper .img_section {
+  margin-top: 42px;
+}
+
+.activities .wrapper .img_section .img_top img {
+  margin-left: -5px;
+}
+
+.activities .wrapper .img_section .img_bottom img {
+  margin-left: -5px;
+  margin-top: -4px;
+}
+
+.designer_name {
+  margin-top: 152px;
+  border-radius: 0px;
+}
+
+.designer_name .name_wrapper {
+  background-color: #02250A;
+  text-align: center;
+  color: #fff;
+  height: 92px;
+}
+
+.designer_name .name_wrapper .name_text p {
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  padding-top: 43px;
+}
+
+.designer_name .name_wrapper .name_text p span {
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 900;
+  line-height: 19px;
+  letter-spacing: 0em;
+}
+/*# sourceMappingURL=index.css.map */
