--- a/styles/index.scss
+++ b/styles/index.scss
@@ -138,3 +138,273 @@ body {
     }
   }
 }
+
+
+.reason {
+  &_wrapper {
+    display: flex;
+
+    .reason_left {
+      margin-left: 70px;
+
+      .reason_left_wrapper {
+        .greenbox {
+          width: 552px;
+          height: 635px;
+          background-color: $primary;
+        }
+
+        .image_left {
+          img.image_left {
+            position: absolute;
+            width: 552px;
+            height: 635px;
+            margin-top: -42rem;
+            margin-left: -30px;
+          }
+        }
+
+        .play_button {
+          img.play_button {
+
+            position: absolute;
+            z-index: 1;
+            margin-top: -26rem;
+            margin-left: 11.5rem;
+          }
+        }
+      }
+    }
+
+    .reason_right {
+      width: 641px;
+      margin-left: 66px;
+
+      &_wrapper {
+        .h1 {
+          font-family: Inter;
+          font-size: 48px;
+          font-weight: 700;
+          line-height: 58px;
+          letter-spacing: 0em;
+          text-align: left;
+        }
+
+        .right_content {
+          p {
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 22px;
+            letter-spacing: 0em;
+            text-align: left;
+            margin-bottom: 60px;
+          }
+        }
+      }
+    }
+  }
+}
+
+.report {
+  background-color: $primary;
+  height: 809px;
+
+  .report_inner {
+    text-align: center;
+
+    .report_inner_wrapper {
+      .box {
+        margin-bottom: -50px;
+
+        p {
+          font-family: Inter;
+          font-size: 48px;
+          font-weight: 700;
+          line-height: 58px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: white;
+          padding-top: 56px;
+          margin-left: 40px;
+        }
+      }
+
+      .line {
+        height: 11px;
+        width: 110px;
+        margin-left: 40px;
+        border-radius: 0px;
+        background-color: white;
+        margin-bottom: 50px;
+      }
+
+      .image_box {
+
+        width: 97%;
+
+        .image_box_wrapper {
+          display: flex;
+          justify-content: space-evenly;
+
+          .white_box {
+            height: 424px;
+            width: 300px;
+            border-radius: 8px;
+            background-color: #fff;
+            margin-left: 66px;
+
+
+
+            .image {
+              height: 207px;
+              width: 255px;
+              margin-top: 2px;
+              margin-left: -3px;
+              border-radius: 8px;
+              padding-left: 5px;
+              padding-left: 5px;
+              display: flex;
+            }
+
+            .text_content {
+              width: 40vh;
+              margin-top: 2px;
+              margin-left: 10px;
+
+              .green_text {
+                p {
+                  font-family: Inter;
+                  font-size: 18px;
+                  font-weight: 500;
+                  line-height: 22px;
+                  text-align: left;
+                  text-align: left;
+                  color: $primary;
+                }
+              }
+            }
+
+            .date {
+              p {
+                font-family: Inter;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 17px;
+                text-align: right;
+                margin-top: -35px;
+                margin-right: 14px;
+              }
+            }
+
+            .black_text {
+              p {
+                font-family: Inter;
+                font-size: 15px;
+                font-weight: 400;
+                line-height: 18px;
+                text-align: left;
+              }
+            }
+
+            .ogun_text {
+              font-family: Inter;
+              font-size: 18px;
+              font-weight: 500;
+              line-height: 22px;
+              letter-spacing: 0em;
+              text-align: left;
+              color: $primary;
+              margin-top: 22px;
+            }
+          }
+        }
+      }
+    }
+
+    button.white {
+      width: 259px;
+      height: 70px;
+      margin-top: 63px;
+
+      p {
+        font-family: Inter;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: 0em;
+        text-transform: capitalize;
+      }
+    }
+  }
+}
+
+.activities {
+  .wrapper {
+    margin-left: 70px;
+
+    .header_text {
+      width: 660px;
+
+      p {
+        font-family: Inter;
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 58px;
+        letter-spacing: 0em;
+        text-align: left;
+      }
+    }
+
+    .img_section {
+      margin-top: 42px;
+
+      .img_top {
+        img {
+          margin-left: -5px;
+        }
+      }
+
+      .img_bottom {
+        img {
+          margin-left: -5px;
+          margin-top: -4px;
+        }
+      }
+    }
+  }
+}
+
+.designer_name {
+  // width: 1440px;
+  margin-top: 152px;
+
+  border-radius: 0px;
+
+  .name_wrapper {
+    background-color: $primary;
+    text-align: center;
+    color: #fff;
+    height: 92px;
+
+
+    .name_text {
+      p {
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 19px;
+        letter-spacing: 0em;
+        padding-top: 43px;
+
+        span {
+          font-family: Inter;
+          font-size: 16px;
+          font-weight: 900;
+          line-height: 19px;
+          letter-spacing: 0em;
+        }
+      }
+    }
+  }
+}
